--- a/test/home.html
+++ b/test/home.html
@@ -28,7 +28,7 @@
             <div class="navigation">
                 <table width="100%">
                     <tr width="100%">
-                        <th width="20%">
+                        <th width="16.66%">
 							<div class="clublink">
 								<span><p class="clubButtons">Community Service Clubs</p></span>
 								<div class="clublink-content">
@@ -42,58 +42,96 @@
 							</div>
                         </th>
 
-                        <th width="20%">
+                        <th width="16.66%">
 							<div class="clublink">
-								<span><p class="clubButtons">Arts Clubs</p></span>
+								<span><p class="clubButtons">The Arts</p></span>
 								<div class="clublink-content">
-									<button onclick="interactClub()" class="clublink"> The Tide </button><br>
-									<button onclick="keyClub()" class="clublink"> Drama Club </button><br>
-									<button onclick="NHS()" class="clublink">Percussion Ensemble </button><br>
-									<button onclick="athleticLeadershipCouncil()" class="clublink"> Marching Band & Color Guard </button><br>
-									<button onclick="earthAction()" class="clublink"> Earth Action </button><br>
-									<button onclick="TNHS()" class="clublink"> NH Technical Honors Society </button><br>
+									<button onclick="theTide()" class="clublink"> The Tide </button><br>
+									<button onclick="dramaClub()" class="clublink"> Drama Club </button><br>
+									<button onclick="percussionEnsemble()" class="clublink"> Percussion Ensemble </button><br>
+									<button onclick="colorGuard()" class="clublink"> Marching Band & Color Guard </button><br>
+									<button onclick="winterGuard()" class="clublink"> Winter Guard </button><br>
+									<button onclick="varietyShow()" class="clublink"> Variety Show </button><br>
+                  <button onclick="jazzBand()" class="clublink"> Jazz Band </button><br>
+									<button onclick="soundWaves()" class="clublink"> Soundwaves </button><br>
+									<button onclick="TGC()" class="clublink"> Traditional Gaming Club </button><br>
+									<button onclick="WAC()" class="clublink"> Worlds Arts Club </button><br>
+									<button onclick="photographyClub()" class="clublink"> Photography Club </button><br>
+									<button onclick="latinClub()" class="clublink"> Latin Club </button><br>
+                  <button onclick="frenchClub()" class="clublink"> French Club </button><br>
+									<button onclick="spanishClub()" class="clublink"> Spanish Club </button><br>
+									<button onclick="ffa()" class="clublink"> Future Farmers of America </button><br>
 								</div>
 							</div>
                         </th>
 
-                        <th width="20%">
+                        <th width="16.66%">
 							<div class="clublink">
 								<span><p class="clubButtons">Leadership Clubs</p></span>
 								<div class="clublink-content">
-									<button onclick="interactClub()" class="clublink"> Interact Club </button><br>
-									<button onclick="keyClub()" class="clublink"> Key Club </button><br>
-									<button onclick="NHS()" class="clublink"> National Honors Society </button><br>
-									<button onclick="athleticLeadershipCouncil()" class="clublink"> Athletic Leadership </button><br>
-									<button onclick="earthAction()" class="clublink"> Earth Action </button><br>
-									<button onclick="TNHS()" class="clublink"> NH Technical Honors Society </button><br>
+									<button onclick="classOf2019()" class="clublink"> Class of 2019 </button><br>
+									<button onclick="classOf2020()" class="clublink"> Class of 2020 </button><br>
+									<button onclick="classOf2021()" class="clublink"> Class of 2021 </button><br>
+									<button onclick="classOf2022()" class="clublink"> Class of 2022 </button><br>
+									<button onclick="gsa()" class="clublink"> Gay Staight Alliance </button><br>
+									<button onclick="projectSearch()" class="clublink"> Project SEARCH </button><br>
+                  <button onclick="YtY()" class="clublink"> Youth-to-Youth </button><br>
+									<button onclick="StudentGov()" class="clublink"> Student Government </button><br>
 								</div>
 							</div>
                         </th>
 
-                        <th width="20%">
+                        <th width="16.66%">
 							<div class="clublink">
 								<span><p class="clubButtons">Academic Competition Clubs</p></span>
 								<div class="clublink-content">
-									<button onclick="interactClub()" class="clublink"> Interact Club </button><br>
-									<button onclick="keyClub()" class="clublink"> Key Club </button><br>
-									<button onclick="NHS()" class="clublink"> National Honors Society </button><br>
-									<button onclick="athleticLeadershipCouncil()" class="clublink"> Athletic Leadership </button><br>
-									<button onclick="earthAction()" class="clublink"> Earth Action </button><br>
-									<button onclick="TNHS()" class="clublink"> NH Technical Honors Society </button><br>
+									<button onclick="DSR()" class="clublink"> Dover Shockwave Robotics </button><br>
+									<button onclick="graniteStateChallenge()" class="clublink"> Granite State Challenge </button><br>
+									<button onclick="mathTeam()" class="clublink"> Mathematics Team </button><br>
+									<button onclick="cyberPatriot()" class="clublink"> Cyberpatriot Club </button><br>
+									<button onclick="chessclub()" class="clublink"> Chess Club </button><br>
+									<button onclick="NJROTC()" class="clublink"> NJROTC </button><br>
 								</div>
 							</div>
                         </th>
 
-                        <th width="20%">
+                        <th width="16.66%">
 							<div class="clublink">
 								<span><p class="clubButtons">Sports</p></span>
 								<div class="clublink-content">
-									<button onclick="interactClub()" class="clublink"> Interact Club </button><br>
-									<button onclick="keyClub()" class="clublink"> Key Club </button><br>
-									<button onclick="NHS()" class="clublink"> National Honors Society </button><br>
-									<button onclick="athleticLeadershipCouncil()" class="clublink"> Athletic Leadership </button><br>
-									<button onclick="earthAction()" class="clublink"> Earth Action </button><br>
-									<button onclick="TNHS()" class="clublink"> NH Technical Honors Society </button><br>
+									<button onclick="baseball()" class="clublink"> Baseball </button><br>
+									<button onclick="boysBasketball()" class="clublink"> Boys Basketball </button><br>
+									<button onclick="boysFootball()" class="clublink"> Football </button><br>
+									<button onclick="boysIceHockey()" class="clublink"> Boys Ice Hockey </button><br>
+									<button onclick="boysLacrosse()" class="clublink"> Lacrosse </button><br>
+                  <button onclick="boysSoccer()" class="clublink"> Boys Soccer </button><br>
+                  <button onclick="boysVolleyball()" class="clublink"> Boys Volleyball </button><br>
+                  <button onclick="boysWrestling()" class="clublink"> Wrestling </button><br>
+                  <button onclick="girlsBasketball()" class="clublink"> Girls Basketball </button><br>
+                  <button onclick="girlsFieldHockey()" class="clublink"> Field Hockey </button><br>
+                  <button onclick="girlsIceHockey()" class="clublink"> Girls Ice Hockey </button><br>
+                  <button onclick="girlsSoccer()" class="clublink"> Girls Soccer </button><br>
+                  <button onclick="softball()" class="clublink"> Softball </button><br>
+                  <button onclick="cheer()" class="clublink"> Cheer </button><br>
+                  <button onclick="girlsVolleyball()" class="clublink"> Girls Volleyball </button><br>
+                  <button onclick="crossCountry()" class="clublink"> Cross Country </button><br>
+                  <button onclick="golf()" class="clublink"> Golf </button><br>
+                  <button onclick="bowling()" class="clublink"> Bowling </button><br>
+									<button onclick="equestrian()" class="clublink"> Equestrian Team </button><br>
+								</div>
+							</div>
+                        </th>
+
+                        <th width="16.66%">
+							<div class="clublink">
+								<span><p class="clubButtons">Other category we need</p></span>
+								<div class="clublink-content">
+									<button onclick="()" class="clublink"></button><br>
+									<button onclick="()" class="clublink"></button><br>
+									<button onclick="()" class="clublink"></button><br>
+									<button onclick="()" class="clublink"></button><br>
+									<button onclick="()" class="clublink"></button><br>
+									<button onclick="()" class="clublink"></button><br>
 								</div>
 							</div>
                         </th>
